--- a/Learning_Django/tasks/templates/tasks/add.html
+++ b/Learning_Django/tasks/templates/tasks/add.html
@@ -4,7 +4,8 @@
     <h1>
         Add Task
     </h1>
-    <form>
+    <form action="{% url 'tasks:add' %}" method="post">
+        {% csrf_token %}
         <input type="text" name="input">
         <input type="submit">
     </form>
